# napari-serialcellpose

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
book/: Post_processing.ipynb
sample_data/: License.md
sample_data/data_multiscene/data_out/: cdp2bioactives_h15.ome_scene0_mask.tif  cdp2bioactives_h15.ome_scene1_mask.tif  cdp2bioactives_h15.ome_scene2_mask.tif  cdp2bioactives_h15.ome_scene3_mask.tif  cdp2bioactives_h15.ome_scene4_mask.tif  cdp2bioactives_h15.ome_scene5_mask.tif  cdp2bioactives_h23.ome_scene0_mask.tif  cdp2bioactives_h23.ome_scene1_mask.tif  cdp2bioactives_h23.ome_scene2_mask.tif  cdp2bioactives_h23.ome_scene3_mask.tif  cdp2bioactives_h23.ome_scene4_mask.tif  cdp2bioactives_h23.ome_scene5_mask.tif
sample_data/data_multiscene/data_out/tables/: cdp2bioactives_h15.ome_scene0_props.csv  cdp2bioactives_h15.ome_scene1_props.csv  cdp2bioactives_h15.ome_scene2_props.csv  cdp2bioactives_h15.ome_scene3_props.csv  cdp2bioactives_h15.ome_scene4_props.csv  cdp2bioactives_h15.ome_scene5_props.csv  cdp2bioactives_h23.ome_scene0_props.csv  cdp2bioactives_h23.ome_scene1_props.csv  cdp2bioactives_h23.ome_scene2_props.csv  cdp2bioactives_h23.ome_scene3_props.csv  cdp2bioactives_h23.ome_scene4_props.csv  cdp2bioactives_h23.ome_scene5_props.csv  summary.csv
src/napari_serialcell/: __init__.py  napari.yaml  serial_analysis.py
src/napari_serialcell/_tests/: test_reader.py  test_widget.py
src/napari_serialcellpose/: __init__.py  _reader.py  folder_list_widget.py  napari.yaml  serial_analysis.py  serial_widget.py  utils.py
src/napari_serialcellpose/_tests/: my_options.yml  test_reader.py  test_widget.py
src/napari_serialcellpose/_tests/data/multifile/: tile_0_0.tif  tile_0_1.tif  tile_1_0.tif  tile_1_1.tif
src/napari_serialcellpose/_tests/data/single_file_multichannel/: sample_EmbryoTorax.tif
src/napari_serialcellpose/_tests/data/single_file_singlechannel/: sample_EmbryoTorax_cells.tif
