[metadata]
name = napari-serialcellpose

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
url = https://github.com/guiwitz/napari-serialcellpose
license = BSD-3-Clause
description = A simple plugin to batch segment cells with cellpose
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-serialcellpose/issues
    Documentation = https://github.com/guiwitz/napari-serialcellpose#README.md
    Source Code = https://github.com/guiwitz/napari-serialcellpose
    User Support = https://github.com/guiwitz/napari-serialcellpose/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    cellpose
    numpy
    magicgui
    qtpy
    matplotlib
    bioio
    bioio-tifffile


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    cellpose < 4
    bioio-nd2


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-serialcellpose = napari_serialcellpose:napari.yaml
